--- a/src/main/resources/com/example/myfirstproject/my.css
+++ b/src/main/resources/com/example/myfirstproject/my.css
@@ -1,3 +1,14 @@
-.txtField{
-  -fx-background: #185);
+.button{
+    -fx-background-color: #7ED4AD;
+    -fx-background-radius: 5px;
+    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.3), 5, 0, 0, 1);
+    -fx-text-fill: black;
 }
+
+VBox {
+    -fx-background-color: linear-gradient(#3D0301, #D76C82);
+}
+
+
+
+
