--- a/src/main/resources/com/example/myfirstproject/hello-view.fxml
+++ b/src/main/resources/com/example/myfirstproject/hello-view.fxml
@@ -48,8 +48,8 @@
          <children>
             <TableView fx:id="tableAddressBook" layoutX="26.0" layoutY="14.0" prefHeight="224.0" prefWidth="251.0" stylesheets="@my.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
               <columns>
-                <TableColumn prefWidth="259.0" text="ПІП" />
-                <TableColumn prefWidth="280.0" text="Телефон" />
+                <TableColumn fx:id="columnPIP" prefWidth="259.0" text="ПІП" />
+                <TableColumn fx:id="columnPhone" prefWidth="280.0" text="Телефон" />
               </columns>
             </TableView>
          </children>
@@ -60,7 +60,7 @@
          </VBox.margin>
          <children>
             <Label id="label1" fx:id="labelCount" layoutX="21.0" layoutY="46.0" stylesheets="@my.css" text="Кількість записів:" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" />
-            <Button fx:id="btnOtherLabs" layoutX="400.0" layoutY="71.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="140.0" text="Інші практичні" onAction="#choosePage" />
+            <Button fx:id="btnOtherLabs" layoutX="400.0" layoutY="71.0" mnemonicParsing="false" onAction="#choosePage" prefHeight="30.0" prefWidth="140.0" text="Інші практичні" />
          </children>
       </AnchorPane>
    </children>
