--- a/src/main/resources/com/example/myfirstproject/my.css
+++ b/src/main/resources/com/example/myfirstproject/my.css
@@ -1,14 +1,38 @@
-.button{
-    -fx-background-color: #7ED4AD;
+/* Задній фон з градієнтом */
+.root {
+    -fx-background-color: linear-gradient(from 0% 0% to 100% 100%, #001F3F, #6A9AB0);
+}
+
+/* Стиль для кнопок */
+.button {
+    -fx-background-color: #D7B26D;
+    -fx-text-fill: white; /* Білий шрифт на кнопці */
+    -fx-font-size: 14px;
+    -fx-padding: 10px 20px;
+    -fx-border-radius: 5px;
     -fx-background-radius: 5px;
-    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.3), 5, 0, 0, 1);
-    -fx-text-fill: black;
 }
 
-VBox {
-    -fx-background-color: linear-gradient(#3D0301, #D76C82);
+/* Ефект при наведенні на кнопки */
+.button:hover {
+    -fx-background-color: #EEE2B5;
 }
 
+/* Шрифт для всіх елементів */
+.root, .button {
+    -fx-font-family: "Times New Roman", Times, serif; /* Шрифт Times New Roman */
+    -fx-font-size: 12px; /* Розмір шрифту 12px */
+}
 
+/* Стиль для Label */
+.label {
+    -fx-text-fill: white; /* Білий колір для тексту */
+    -fx-font-family: "Times New Roman", Times, serif; /* Шрифт Times New Roman */
+    -fx-font-size: 12px; /* Розмір шрифту */
+}
 
-
+/* Стиль для заголовків стовпців */
+#tableAddressBook .column-header {
+    -fx-text-fill: black; /* Чорний колір для тексту в заголовках стовпців */
+    -fx-background-color: #001F3F; /* Колір фону заголовків стовпців */
+}
