--- a/src/main/resources/com/example/myfirstproject/my.css
+++ b/src/main/resources/com/example/myfirstproject/my.css
@@ -1,4 +1,4 @@
-/* Задній фон з градієнтом */
+/* Загальний фон з градієнтом */
 .root {
     -fx-background-color: linear-gradient(from 0% 0% to 100% 100%, #001F3F, #6A9AB0);
 }
@@ -19,20 +19,44 @@
 }
 
 /* Шрифт для всіх елементів */
-.root, .button {
-    -fx-font-family: "Times New Roman", Times, serif; /* Шрифт Times New Roman */
-    -fx-font-size: 12px; /* Розмір шрифту 12px */
+.root, .button, .label {
+    -fx-font-family: "Times New Roman", Times, serif;
+    -fx-font-size: 12px; /* Розмір шрифту для всіх елементів */
 }
 
 /* Стиль для Label */
 .label {
-    -fx-text-fill: white; /* Білий колір для тексту */
-    -fx-font-family: "Times New Roman", Times, serif; /* Шрифт Times New Roman */
-    -fx-font-size: 12px; /* Розмір шрифту */
+    -fx-text-fill: white; /* Білий колір тексту для Label */
+    -fx-font-size: 12px; /* Розмір шрифту для Label */
 }
 
-/* Стиль для заголовків стовпців */
+/* Стиль для текстових полів */
+.text-field {
+    -fx-background-color: white; /* Білий фон для TextField */
+    -fx-text-fill: black; /* Чорний текст у текстовому полі */
+    -fx-font-size: 12px; /* Розмір шрифту для TextField */
+}
+
+/* Стиль для заголовків стовпців таблиці */
 #tableAddressBook .column-header {
-    -fx-text-fill: black; /* Чорний колір для тексту в заголовках стовпців */
+    -fx-text-fill: black; /* Чорний колір тексту в заголовках стовпців */
     -fx-background-color: #001F3F; /* Колір фону заголовків стовпців */
+}
+
+/* Стиль для CheckBox */
+.check-box {
+    -fx-text-fill: white; /* Білий колір тексту для CheckBox */
+    -fx-font-size: 12px; /* Розмір шрифту для CheckBox */
+}
+
+/* Додатковий стиль для конкретних CheckBox */
+#ChBPogod, #ChBDruz, #ChBGnuch, #ChBSklad, #radioProp, #radioLay, #radioCode, #radioHier {
+    -fx-text-fill: white; /* Білий колір тексту для конкретних CheckBox */
+}
+
+/* Стиль для CheckBox, ChoiceBox, ComboBox, RadioButton */
+#Chek, #Choi, #Com, #Rad{
+    -fx-text-fill: white; /* Білий колір тексту */
+    -fx-font-family: "Times New Roman", Times, serif; /* Шрифт Times New Roman */
+    -fx-font-size: 25px; /* Розмір шрифту 25 */
 }
